Fix profile name for reporting.

BUG=845909

Change-Id: I8d697a1b6204927e8b3b96c6959b31bf879bde9f
Reviewed-on: https://chromium-review.googlesource.com/1069005
Reviewed-by: Marc-André Decoste <mad@chromium.org>
Commit-Queue: Georges Khalil <georgesak@chromium.org>
Cr-Commit-Position: refs/heads/master@{#561107}
Former-commit-id: 66bfbb452d65cc35aa1c48c95cfc49843dc95841