chrome/browser/extensions/api/enterprise_reporting_private/chrome_desktop_report_request_helper_unittest.cc
@@ -6,9 +6,11 @@
 
 #include "base/json/json_reader.h"
 #include "base/values.h"
+#include "chrome/common/pref_names.h"
 #include "chrome/test/base/testing_profile.h"
 #include "components/policy/core/common/cloud/cloud_policy_util.h"
 #include "components/policy/proto/device_management_backend.pb.h"
+#include "components/prefs/pref_service.h"
 #include "content/public/test/test_browser_thread_bundle.h"
 #include "testing/gtest/include/gtest/gtest.h"
 
@@ -72,7 +74,7 @@ TEST_F(ChromeDesktopReportRequestGeneratorTest, MachineName) {
 TEST_F(ChromeDesktopReportRequestGeneratorTest, ProfileName) {
   // Set the profile name to a known value to compare against.
   const std::string test_name("TEST");
-  profile_.set_profile_name(test_name);
+  profile_.GetPrefs()->SetString(prefs::kProfileName, test_name);
 
   // An empty report suffices for this test. The information of interest is
   // sourced from the profile
